--- a/contenteditable.html
+++ b/contenteditable.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>This is a test of the content editable feature</title>
-		<link href='style.css' rel='stylesheet' type='text/css'/>
+		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
-		<script src='./js/interactions.js' type='text/javascript'></script>
 		<script src="./js/functions.js" type='text/javascript'></script>
+		<script src='./js/interactions.js' type='text/javascript'></script>
 		
 	</head>
 	<body>
