--- a/contenteditable.html
+++ b/contenteditable.html
@@ -3,14 +3,20 @@
 	<head>
 		<title>This is a test of the content editable feature</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
+		<link href='./css/jquery-ui.min.css' type='text/css'/>
+		<link href='./css/jquery-ui.structure.min.css' type='text/css'/>
+		<link href='./css/jquery-ui.theme.min.css' type='text/css'/>
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
+		<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' 
+		type='text/javascript'></script>
 		<script src="./js/functions.js" type='text/javascript'></script>
 		<script src='./js/interactions.js' type='text/javascript'></script>
 		
 	</head>
 	<body>
-		<div id='contentEdit' contenteditable='true'>
-			This is a placeholder.
+		<div id='contentEdit' class = 'contentEdit'>
 		</div>
+<!-- 		<div id='contentEdit2' class = 'contentEdit'>
+		</div> -->
 	</body>
 </html>
