--- a/contenteditable.html
+++ b/contenteditable.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>This is a test of the content editable feature</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
-		<link href='./css/jquery-ui.min.css' type='text/css'/>
-		<link href='./css/jquery-ui.structure.min.css' type='text/css'/>
-		<link href='./css/jquery-ui.theme.min.css' type='text/css'/>
+		<link href='./css/jquery-ui.min.css' rel='stylesheet' type='text/css'/>
+		<!-- <link href='./css/jquery-ui.structure.min.css' rel='stylesheet' type='text/css'/>
+		<link href='./css/jquery-ui.theme.min.css' rel='stylesheet' type='text/css'/> -->
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
 		<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' 
 		type='text/javascript'></script>
-		<script src="./js/functions.js" type='text/javascript'></script>
+		<script src="./js/img-txt-hybrid.js" type='text/javascript'></script>
 		<script src='./js/interactions.js' type='text/javascript'></script>
 		
 	</head>
