FIXED MULTIFILE ERROR AND ADJUSTED EXAMPLE
Example includes buttons that can print data about all the images that are
'uploaded' on edit-div, as well as one that copies the edit-div to another
div, maintaining interactivity on any uploaded images.

Multifile drag_and_drop uploading is fixed and functional.

Uploaded image element ids are now based on their original filenames (with
random numbers prepended). For example, a file with the name Dogs.jpg may
be uploaded and have an element id of 0_12332585584_Dogs.jpg.

Room for improvement: Firefox still drops uploading data. Dropping data is
caught by a conditional related to the upload image size. Functionality
does work during the second attempt.

--- a/contenteditable.html
+++ b/contenteditable.html
@@ -14,6 +14,17 @@
 	<body>
 		<div id='contentEdit' class = 'contentEdit'>
 		</div>
+		<button id='print_data'>
+			PRINT DATA
+		</button>
+		<button id='copy_box'>
+			COPY TO BOTTOM BOX
+		</button>
+		<div id='result'>
+		</div>
+		<div id='copySide' class='contentEdit'>
+		</div>
+
 <!-- 		<div id='contentEdit2' class = 'contentEdit'>
 		</div> -->
 	</body>
