--- a/contenteditable.html
+++ b/contenteditable.html
@@ -20,7 +20,12 @@
 		<button id='copy_box'>
 			COPY TO BOTTOM BOX
 		</button>
-		<div id='result'>
+		<button id='print_text'>
+			PRINT TEXT
+		</button>
+		<div id='result' class='resultbox'>
+		</div>
+		<div id='textbox' class='resultbox'>
 		</div>
 		<div id='copySide' class='contentEdit'>
 		</div>
