CODE CLEANUP pt 1
- Changed names and conventions of some of the functions
- Alerts will let you know if you should try using another upload
  method

--- a/contenteditable.html
+++ b/contenteditable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is a test of the content editable feature</title>
+		<title>This is a test of the imgTxtHybrid feature</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
 		<link href='./css/jquery-ui.min.css' rel='stylesheet' type='text/css'/>
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
@@ -17,20 +17,14 @@
 		<button id='print_data'>
 			PRINT DATA
 		</button>
-		<button id='copy_box'>
-			COPY TO BOTTOM BOX
-		</button>
 		<button id='print_text'>
 			PRINT TEXT
 		</button>
+
 		<div id='result' class='resultbox'>
 		</div>
 		<div id='textbox' class='resultbox'>
 		</div>
-		<div id='copySide' class='contentEdit'>
-		</div>
 
-<!-- 		<div id='contentEdit2' class = 'contentEdit'>
-		</div> -->
 	</body>
 </html>
