--- a/contenteditable.html
+++ b/contenteditable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is a test of the imgTxtHybrid feature</title>
+		<title>imgTxtHybrid.js Features</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
 		<link href='./css/jquery-ui.min.css' rel='stylesheet' type='text/css'/>
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
@@ -12,19 +12,36 @@
 		
 	</head>
 	<body>
-		<div id='contentEdit' class = 'contentEdit'>
-		</div>
-		<button id='print_data'>
-			PRINT DATA
-		</button>
-		<button id='print_text'>
-			PRINT TEXT
-		</button>
+		<div id='header'><h1>imgTxtHybrid.js Test-box</h1><span id='helpicon'></div></div>
+		<div id='contentEdit' class ='contentEdit'>
+			</div>
+			<button id='print_data'>
+				$("#contentEdit").imgSrc();
+			</button>
+			<button id='print_text'>
+				$("#contentEdit").stringConvHTMLtoJS();
+			</button>
 
-		<div id='result' class='resultbox'>
+			<div id='result' class='resultbox'>
+			</div>
+			<div id='textbox' class='resultbox'>
+			</div>
+		<div id ='help_display'>
 		</div>
-		<div id='textbox' class='resultbox'>
-		</div>
-
+		
+		<div id='help_text'>
+				<button id='exit_display'>X</button>
+				<h3>imgTxtHybrid.js demo:</h3>
+				<p>Thank you for checking out this jQuery plugin demo!
+				There are several things you can do while you're here.</p>
+				<ul>
+					<li> <strong>Copy-paste</strong> images 
+					from other websites into the big text-box <strong>OR</strong></li>
+					<li> <strong>Drag-and drop</strong> images from your computer. </li>
+					<li> <strong>Type</strong> out your life story!</li>
+					<li> <strong>Click</strong> either of the buttons below to see
+						what the built-in functions can send to the backend. </li>
+				</ul>
+			</div>
 	</body>
 </html>
