RENAMED CONTENTEDITABLE.HTML to INDEX.HTML
- revised stylings and interactions

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 					from other websites into the big text-box <strong>OR</strong></li>
 					<li> <strong>Drag-and drop</strong> images from your computer. </li>
 					<li> <strong>Type</strong> out your life story!</li>
-					<li> <strong>Click</strong> either of the buttons below to see
-						what the built-in functions can send to the backend. </li>
+					<li> <strong>Click</strong> either of the buttons below the text area 
+					to see what the built-in functions can send to the backend. </li>
+					<li> <strong><a href='https://github.com/paolopaolopaolo/Img-Txt-Hybrid/fork'>Fork</a></strong> this repository for your own nefarious purposes.</li> 
+					<li><strong><a href='https://github.com/paolopaolopaolo/Img-Txt-Hybrid/archive/master.zip' download>Download</a></strong> the Javascript file to use on your own dastardly website!</li>	
 				</ul>
 			</div>
 	</body>
