--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>imgTxtHybrid.js Features</title>
+		<title>img-txt-hybrid.js Features</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
 		<link href='./css/jquery-ui.min.css' rel='stylesheet' type='text/css'/>
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
 		<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' 
 		type='text/javascript'></script>
-		<script src="./js/img-txt-hybrid.js" type='text/javascript'></script>
+		<script src="./js/img-txt-hybrid.min.js" type='text/javascript'></script>
 		<script src='./js/interactions.js' type='text/javascript'></script>
 		
 	</head>
 	<body>
-		<div id='header'><h1>imgTxtHybrid.js Test-box</h1><span id='helpicon'></div></div>
+		<div id='header'><h1>img-txt-hybrid.js test-box</h1><span id='helpicon'></div></div>
 		<div id='contentEdit' class ='contentEdit'>
 			</div>
 			<button id='print_data'>
