--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<li> <strong>Click</strong> either of the buttons below the text area 
 					to see what the built-in functions can send to the backend. </li>
 					<li> <strong><a href='https://github.com/paolopaolopaolo/Img-Txt-Hybrid/fork'>Fork</a></strong> this repository for your own nefarious purposes.</li> 
-					<li><strong><a href='https://github.com/paolopaolopaolo/Img-Txt-Hybrid/archive/master.zip' download>Download</a></strong> the Javascript file to use on your own dastardly website!</li>	
+					<li><strong><a href='https://github.com/paolopaolopaolo/Img-Txt-Hybrid/archive/master.zip' download>Download</a></strong> the Javascript file to use on your own dastardly website (includes minified JS file)!</li>
 				</ul>
 			</div>
 	</body>
