--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
 		<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' 
 		type='text/javascript'></script>
-		<script src="./js/img-txt-hybrid.min.js" type='text/javascript'></script>
+		<script src="./js/img-txt-hybrid.js" type='text/javascript'></script>
 		<script src='./js/interactions.js' type='text/javascript'></script>
 		
 	</head>
