--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			</div>
 			<div id='textbox' class='resultbox'>
 			</div>
-{# 			<div id='textbox2' class='resultbox'>
-			</div> #}
+<!--{# 			<div id='textbox2' class='resultbox'>
+			</div> #}-->
 		<div id ='help_display'>
 		</div>
 		
