--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 		<title>img-txt-hybrid.js Features</title>
 		<link href='./css/style.css' rel='stylesheet' type='text/css'/>
 		<link href='./css/jquery-ui.min.css' rel='stylesheet' type='text/css'/>
-		<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
-		<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' 
-		type='text/javascript'></script>
-		<script src="./js/img-txt-hybrid.js" type='text/javascript'></script>
-		<script src='./js/interactions.js' type='text/javascript'></script>
+		
 		
 	</head>
 	<body>
@@ -60,4 +56,8 @@
 				</ul>
 			</div>
 	</body>
+	<script src='./js/jquery-1.11.1.min.js' type='text/javascript'></script>
+	<script src='./js/jquery-ui-1.11.2.custom/jquery-ui.min.js' type='text/javascript'></script>
+	<script src="./js/img-txt-hybrid.min.js" type='text/javascript'></script>
+	<script src='./js/interactions.js' type='text/javascript'></script>
 </html>
